// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Copy Always Show 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-bBrHrO HodyL"
    >
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK sc-afnQL iKIurY eFWjlE"
      >
        <div
          class="sc-gKXOVf ckXSHX sc-iBkjds gNjzDq sc-hHLeRK eTSHtc"
        >
          <div
            class="sc-iFwKgL cqyvps"
          >
            <div
              class="sc-iqGgem lyCqM sc-cwpsFg cwqlwQ"
            >
              <div
                data-display="table-head"
              >
                <div
                  data-display="table-row"
                >
                  <div
                    data-display="table-cell"
                  >
                    Name
                  </div>
                  <div
                    data-display="table-cell"
                  >
                    Value
                  </div>
                </div>
              </div>
              <div
                data-display="table-body"
              >
                <div
                  class=""
                  data-display="table-row"
                  data-highlight="false"
                >
                  <a
                    data-display="table-cell"
                    data-key="0"
                  >
                    Type
                  </a>
                  <a
                    data-display="table-cell"
                    data-key="0"
                  >
                    Beginner
                  </a>
                </div>
                <div
                  class=""
                  data-display="table-row"
                  data-highlight="false"
                >
                  <a
                    data-display="table-cell"
                    data-key="1"
                  >
                    Type
                  </a>
                  <a
                    data-display="table-cell"
                    data-key="1"
                  >
                    Advanced
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-fLlhyt hXwBjW"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-copy "
          data-icon="copy"
          data-prefix="far"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M502.6 70.63l-61.25-61.25C435.4 3.371 427.2 0 418.7 0H255.1c-35.35 0-64 28.66-64 64l.0195 256C192 355.4 220.7 384 256 384h192c35.2 0 64-28.8 64-64V93.25C512 84.77 508.6 76.63 502.6 70.63zM464 320c0 8.836-7.164 16-16 16H255.1c-8.838 0-16-7.164-16-16L239.1 64.13c0-8.836 7.164-16 16-16h128L384 96c0 17.67 14.33 32 32 32h47.1V320zM272 448c0 8.836-7.164 16-16 16H63.1c-8.838 0-16-7.164-16-16L47.98 192.1c0-8.836 7.164-16 16-16H160V128H63.99c-35.35 0-64 28.65-64 64l.0098 256C.002 483.3 28.66 512 64 512h192c35.2 0 64-28.8 64-64v-32h-47.1L272 448z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Copy Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-bBrHrO HodyL"
    >
      <div
        class="sc-ivTmOn dNJphr sc-cxabCf hcBkUF"
      >
        Hover me and click on icon to copy
      </div>
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-fLlhyt hXwBjW"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-copy "
          data-icon="copy"
          data-prefix="far"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M502.6 70.63l-61.25-61.25C435.4 3.371 427.2 0 418.7 0H255.1c-35.35 0-64 28.66-64 64l.0195 256C192 355.4 220.7 384 256 384h192c35.2 0 64-28.8 64-64V93.25C512 84.77 508.6 76.63 502.6 70.63zM464 320c0 8.836-7.164 16-16 16H255.1c-8.838 0-16-7.164-16-16L239.1 64.13c0-8.836 7.164-16 16-16h128L384 96c0 17.67 14.33 32 32 32h47.1V320zM272 448c0 8.836-7.164 16-16 16H63.1c-8.838 0-16-7.164-16-16L47.98 192.1c0-8.836 7.164-16 16-16H160V128H63.99c-35.35 0-64 28.65-64 64l.0098 256C.002 483.3 28.66 512 64 512h192c35.2 0 64-28.8 64-64v-32h-47.1L272 448z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Copy Icon Only 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds heXUfd"
    >
      Only copy icon that can be placed anywhere.
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-bBrHrO ejUXtf"
      >
        <div
          class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-fLlhyt hXwBjW"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-copy "
            data-icon="copy"
            data-prefix="far"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M502.6 70.63l-61.25-61.25C435.4 3.371 427.2 0 418.7 0H255.1c-35.35 0-64 28.66-64 64l.0195 256C192 355.4 220.7 384 256 384h192c35.2 0 64-28.8 64-64V93.25C512 84.77 508.6 76.63 502.6 70.63zM464 320c0 8.836-7.164 16-16 16H255.1c-8.838 0-16-7.164-16-16L239.1 64.13c0-8.836 7.164-16 16-16h128L384 96c0 17.67 14.33 32 32 32h47.1V320zM272 448c0 8.836-7.164 16-16 16H63.1c-8.838 0-16-7.164-16-16L47.98 192.1c0-8.836 7.164-16 16-16H160V128H63.99c-35.35 0-64 28.65-64 64l.0098 256C.002 483.3 28.66 512 64 512h192c35.2 0 64-28.8 64-64v-32h-47.1L272 448z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Copy With Tag 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-bBrHrO HodyL"
    >
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK iKIurY sc-eFWqGp gPSCbK"
      >
        <div
          class="sc-gKXOVf QRSBg sc-iBkjds eecmTK sc-hHLeRK sc-grREDI iKIurY coRGQK"
        >
          <div
            class="sc-ivTmOn qStAn sc-cxabCf ecsbJB"
          >
            Type: 
          </div>
          <div
            class="sc-ivTmOn fSbxau sc-cxabCf ecsbJB"
          >
            Beginner
          </div>
        </div>
      </div>
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-fLlhyt hXwBjW"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-copy "
          data-icon="copy"
          data-prefix="far"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M502.6 70.63l-61.25-61.25C435.4 3.371 427.2 0 418.7 0H255.1c-35.35 0-64 28.66-64 64l.0195 256C192 355.4 220.7 384 256 384h192c35.2 0 64-28.8 64-64V93.25C512 84.77 508.6 76.63 502.6 70.63zM464 320c0 8.836-7.164 16-16 16H255.1c-8.838 0-16-7.164-16-16L239.1 64.13c0-8.836 7.164-16 16-16h128L384 96c0 17.67 14.33 32 32 32h47.1V320zM272 448c0 8.836-7.164 16-16 16H63.1c-8.838 0-16-7.164-16-16L47.98 192.1c0-8.836 7.164-16 16-16H160V128H63.99c-35.35 0-64 28.65-64 64l.0098 256C.002 483.3 28.66 512 64 512h192c35.2 0 64-28.8 64-64v-32h-47.1L272 448z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
